--- a/jogo/templates/jogo/time.html
+++ b/jogo/templates/jogo/time.html
@@ -47,7 +47,7 @@
 
                             {% for p in performace %}
                                 <li>
-                                <div class="card {% if p == 'V' %}green{% elif p == 'D'%}red{% else %}grey{% endif %}">
+                                <div class="z-depth-1 card {% if p == 'V' %}green accent-3{% elif p == 'D'%}red lighten-1{% else %}yellow lighten-1{% endif %}">
                                     <h6 style="margin: 10px; padding: 10px">{{ p }}</h6>
                                 </div>
                                 </li>
