--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -5,7 +5,7 @@
 <div class="row">
 
      <div class="col s12 m4">
-        <div class="card hoverable">
+        <div class="card hoverable z-depth-3">
             <div class="card-content">
                  <span class="card-title center">Desempenho
                      <hr class="deep-orange">
@@ -23,7 +23,7 @@
      </div>
 
     <div class="col s12 m4">
-        <div class="card hoverable">
+        <div class="card hoverable z-depth-3">
             <div class="card-content">
                  <span class="card-title center">Últimos Resultados
                      <hr class="deep-orange">
@@ -31,7 +31,7 @@
                 <ul class="pagination">
                     {% for p in performace %}
                         <li>
-                        <div class="card {% if p == 'V' %}green{% elif p == 'D'%}red{% else %}grey{% endif %}">
+                        <div class="z-depth-1 card {% if p == 'V' %}green accent-3{% elif p == 'D'%}red lighten-1{% else %}yellow lighten-1{% endif %}">
                             <h6 style="margin: 10px; padding: 10px">{{ p }}</h6>
                         </div>
                         </li>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="col s12 m4">
-        <div class="card hoverable">
+        <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Próximo Jogo</span>
                     {% if proximos_jogos.count > 0 %}
@@ -70,7 +70,7 @@
     </div>
 
     <div class="col s12 m4">
-        <div class="card hoverable">
+        <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Último Jogo</span>
                     {% if jogos_anteriores.count > 0 %}
@@ -101,7 +101,7 @@
     </div>
 
     <div class="col s12 m4">
-        <div class="card hoverable">
+        <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Notícias</span>
                     {% if noticias.count > 0 %}
