--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <body>
 
   <nav>
-    <div class="nav-wrapper deep-orange">
+    <div class="nav-wrapper orange">
       <a href="{% url 'home' %}" class="brand-logo">Realmatismo FC</a>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -36,21 +36,21 @@
 
   <ul class="sidenav" id="slide-out">
       <li><div class="user-view">
-      <div class="background deep-orange">
+      <div class="background orange">
 
       </div>
       <a href="#user"><img class="circle" src="../media/adversarios/real.png" width="1000px"></a>
       <a href="#name"><span class="black-text name">Realmatismo FC</span></a>
       <a href="#email"><span class="black-text email">since 2015</span></a>
     </div></li>
-      <li><a href="{% url 'home' %}"><i class="fas fa-home fa-lg"></i>Inicio</a></li>
-      <li><a href="{% url 'jogos' %}"><i class="fas fa-futbol fa-lg"></i> Jogos</a></li>
-      <li><a href="{% url 'atletas' %}"><i class="fas fa-user fa-lg"></i> Atletas</a></li>
-      <li><a href="{% url 'time' %}"><i class="fas fa-users fa-lg"></i>Time</a></li>
-      <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg"></i>Tops</a></li>
-       <li><a href="{% url 'adversarios' %}"><i class="far fa-question-circle fa-lg"></i>Adversários</a></li>
-      <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg"></i>Notícias</a></li>
-      <li><a href="{% url 'galeria' %}"><i class="fas fa-camera fa-lg"></i>Fotos</a></li>
+      <li><a href="{% url 'home' %}"><i class="fas fa-home fa-lg" style="color: orange"></i>Inicio</a></li>
+      <li><a href="{% url 'jogos' %}"><i class="fas fa-futbol fa-lg" style="color: orange"></i> Jogos</a></li>
+      <li><a href="{% url 'atletas' %}"><i class="fas fa-user fa-lg" style="color: orange"></i> Atletas</a></li>
+      <li><a href="{% url 'time' %}"><i class="fas fa-users fa-lg" style="color: orange"></i>Time</a></li>
+      <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg" style="color: orange"></i>Tops</a></li>
+       <li><a href="{% url 'adversarios' %}"><i class="far fa-question-circle fa-lg" style="color: orange"></i>Adversários</a></li>
+      <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg" style="color: orange"></i>Notícias</a></li>
+      <li><a href="{% url 'galeria' %}"><i class="fas fa-camera fa-lg" style="color: orange"></i>Fotos</a></li>
   </ul>
 
 <main>
