--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -7,39 +7,59 @@
             <div class="card">
                 <div class="card-content">
                     <div class="row center">
-                        <h5 style="color: orangered">Jogos</h5>
-                        <hr class="deep-orange">
+                        <h5 style="color: orange">Jogos</h5>
+                        <hr class="orange">
                     </div>
+                    <div class="row">
                     {% for jogo in jogos %}
-                        <div class="row">
-                            <div class="center z-depth-2 center-align card card
-                                        {% if jogo.placar_real is None %}grey
-                                        {% else %}
-                                            {% if jogo.placar_real > jogo.placar_adversario %}green accent-3
-                                                {% elif jogo.placar_real < jogo.placar_adversario %}red lighten-1
-                                                {% else %} yellow lighten-1
+
+                            <div class="col s12 m6 l3">
+                                <div class="card horizontal z-depth-2">
+                                    <div class="card-image center">
+                                        <img src="../media/galeria/real.png">
+                                        <img style="max-width: 80px; max-height: 110px;margin-left: 29px"  src="media/{{ jogo.adversario.escudo_adversario }}">
+                                    </div>
+                                    <div class="card-stacked">
+
+                                        <div class="card-content">
+                                            <a href="{% url 'jogo' jogo.pk %}" style="margin-bottom: 15%" class="btn-floating halfway-fab waves-effect waves-light red">
+                                                <i class="material-icons">add</i>
+                                            </a>
+                                            <div class="row center">
+                                                <span>Realmatismo FC</span>
+                                                {% if jogo.placar_real is not None %}
+                                                    <div class="z-depth-1 card center-align">
+                                                        <span>{{jogo.placar_real  }}</span>
+                                                    </div>
+                                                    {% else %}
+                                                    <br>
                                                 {% endif %}
-                                        {% endif %}">
+                                                <span>X</span><br>
+                                                {% if jogo.placar_adversario is not None %}
+                                                    <div class="z-depth-1 card center-align">
+                                                         <span> {{jogo.placar_adversario  }}</span>
+                                                    </div>
+                                                    {% else %}
+                                                    <br>
+                                                {% endif %}
 
-                                <h6 style="padding-top: 20px; padding-bottom: 20px">
-                                    <a href="{% url 'jogo' jogo.pk%}" class="pulse">
-                                      <i class="fas fa-pencil-alt" aria-hidden="true" style="color: black"></i> </a>
-                                    </a>
-                                    Realmatismo
-                                    {% if jogo.placar_real is not None %}
-                                        {{ jogo.placar_real }}
-                                    {% endif %}
-                                    X
-                                    {% if jogo.placar_adversario is not None %}
-                                        {{ jogo.placar_adversario }}
-                                    {% endif %}
-                                    {{ jogo.adversario.nome }}
-                                </h6>
-                                <h6>{{ jogo.data|date:"d/m/Y" }} - {{ jogo.local.nome }}</h6>
+                                                <span>{{ jogo.adversario.nome }}</span>
+
+                                            </div>
+
+
+                                            <div class="row center" >
+                                                {{ jogo.data|date:"D d M Y" }} {{ value|time:"H:i" }}
+                                                {{ jogo.local.nome }}
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
-                        </div>
                     {% endfor %}
-
+                    </div>
                         <div row>
                             <div class="center-align">
                                 <ul class="pagination">
