--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
         <a style="list-style: none" href="http://facebook.com/realamatismofc/">
-            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-facebook-square fa-2x"></i>
         </a>
         <a style="list-style: none" href="http://facebook.com/realamatismofc/">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fa-2x"></i>
         </a>
     </div>
 </div>
 
 <div class="footer-copyright ">
     <div class="container black-text text-darken-2">
-        © 2018-2019 Todos os direitos reservados para Diego Denzer versao 1.0.6
+        © 2018-2019 Todos os direitos reservados para Diego Denzer versao 2.0
     </div>
 </div>
