Status jogadores e info tela inicial.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
           <li><a href="{% url 'adversarios' %}">Adversários</a></li>
           <li><a href="{% url 'noticias' %}">Notícias</a></li>
           <li><a href="{% url 'galeria' %}">Fotos</a></li>
+          <li><a href="{% url 'contato' %}">Contato</a></li>
 
       </ul>
     </div>
@@ -50,9 +51,9 @@
       <li><a href="{% url 'atletas' %}"><i class="fas fa-user fa-lg" style="color: orange"></i> Atletas</a></li>
       <li><a href="{% url 'time' %}"><i class="fas fa-users fa-lg" style="color: orange"></i>Time</a></li>
       <li><a href="{% url 'estatistica' %}"><i class="fas fa-star fa-lg" style="color: orange"></i>Tops</a></li>
-       <li><a href="{% url 'adversarios' %}"><i class="far fa-question-circle fa-lg" style="color: orange"></i>Adversários</a></li>
-      <li><a href="{% url 'noticias' %}"><i class="fas fa-newspaper fa-lg" style="color: orange"></i>Notícias</a></li>
+      <li><a href="{% url 'adversarios' %}"><i class="far fa-question-circle fa-lg" style="color: orange"></i>Adversários</a></li>
       <li><a href="{% url 'galeria' %}"><i class="fas fa-camera fa-lg" style="color: orange"></i>Fotos</a></li>
+      <li><a href="{% url 'contato' %}"><i class="fas fa-envelope fa-lg" style="color: orange"></i>Contato</a></li>
   </ul>
 
 <main>
