--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -4,7 +4,7 @@
 {% load static %}
 <div class="row">
 
-     <div class="col s12 m4">
+     <div class="col s12 m6 l6">
         <div class="card hoverable z-depth-3">
             <div class="card-content">
                  <span class="card-title center">Desempenho
@@ -17,12 +17,12 @@
                 <span style="margin: 10px; padding: 10px; color: {% if teste >= 50 %}green{% else %}red{% endif %}" >
                     {{ teste }}%
                 </span>
-
+                <div class="clearfix"></div>
             </div>
         </div>
      </div>
 
-    <div class="col s12 m4">
+    <div class="col s12 m6 l6">
         <div class="card hoverable z-depth-3">
             <div class="card-content">
                  <span class="card-title center">Últimos Resultados
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
         <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Próximo Jogo</span>
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
         <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Último Jogo</span>
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
         <div class="card hoverable z-depth-3">
             <div class="card-content">
                 <span class="card-title">Notícias</span>
