--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -22,7 +22,7 @@
                                     <div class="card-stacked">
 
                                         <div class="card-content">
-                                            <a href="{% url 'jogo' jogo.pk %}" style="margin-bottom: 15%" class="btn-floating halfway-fab waves-effect waves-light red">
+                                            <a href="{% url 'jogo' jogo.pk %}" style="margin-bottom: 15%" class="btn-floating pulse halfway-fab waves-effect waves-light red">
                                                 <i class="material-icons">add</i>
                                             </a>
                                             <div class="row center">
