Status jogadores e info tela inicial.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta title="Realmatismo Futebol Clube">
     <meta name="description" content="Site do Clube amador Realmatismo Futebol Clube com sua Agenda e Estatisticas">
     <meta name="robots" content="index, follow">
@@ -12,6 +13,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/stylo.css' %}">
+    <link rel="shortcut icon" href="media/galeria/real.ico" />
+
 
     <title>{% block title %}{% endblock %}</title>
 </head>
