--- a/jogo/templates/jogo/jogos.html
+++ b/jogo/templates/jogo/jogos.html
@@ -22,8 +22,8 @@
                                     <div class="card-stacked">
 
                                         <div class="card-content">
-                                            <a href="{% url 'jogo' jogo.pk %}" style="margin-bottom: 15%" class="btn-floating pulse halfway-fab waves-effect waves-light red">
-                                                <i class="material-icons">add</i>
+                                            <a href="{% url 'jogo' jogo.pk %}" style="margin-bottom: 15%" class="btn-floating halfway-fab waves-effect waves-light orange">
+                                                <i class="material-icons">edit</i>
                                             </a>
                                             <div class="row center">
                                                 <span>Realmatismo FC</span>
