--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -72,6 +72,10 @@
                                     {% for t in jogo.jogadores.all %}
                                             <tr>
                                                 <td>
+                                                    <a style="color: black" href="{% url 'atleta' t.atleta.pk %}"
+                                                       class="secondary-content">
+                                                        <i class="fas fa-user" aria-hidden="true"></i> Detalhes
+                                                    </a>
                                                     {{ t.atleta.nome }}
                                                 </td>
                                                 <td>
