--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
         <a style="list-style: none" href="http://facebook.com/realamatismofc/">
             <i class="fab fa-facebook-square fa-2x"></i>
         </a>
-        <a style="list-style: none" href="http://facebook.com/realamatismofc/">
+        <a style="list-style: none" href="https://www.instagram.com/realmatismo_fc1/">
             <i class="fab fa-instagram fa-2x"></i>
         </a>
     </div>
