--- a/jogo/templates/jogo/jogo_detalhe.html
+++ b/jogo/templates/jogo/jogo_detalhe.html
@@ -71,7 +71,7 @@
                                          <tbody>
                                     {% for t in jogo.jogadores.all %}
                                             <tr>
-                                                <td>
+                                                <td style="text-align: left">
                                                     <a style="color: black" href="{% url 'atleta' t.atleta.pk %}"
                                                        class="secondary-content">
                                                         <i class="fas fa-user" aria-hidden="true"></i>
