--- a/jogo/templates/jogo/assistencias.html
+++ b/jogo/templates/jogo/assistencias.html
@@ -10,6 +10,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Assis.</th>
+                                <th>Média</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -20,6 +21,7 @@
                                 <tr>
                                     <td>{{ atleta.nome }}</td>
                                     <td>{{ atleta.assistencia }}</td>
+                                    <td>{{ atleta.media_assistencia }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
