--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -46,7 +46,7 @@
 
                     <ul class="collection">
                         <li class="collection-item"><div>Jogos Disputados<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.jogos_realizados }}</a></div></li>
-                        <li class="collection-item"><div>Gols<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.gols }}</a></div></li>
+                        <li class="collection-item"><div>Gols<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.gols }} {{ atleta.media_gols }}</a></div></li>
                         <li class="collection-item"><div>Assistências<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.assistencia }}</a></div></li>
                         <li class="collection-item"><div>Defesas<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.defesa }}</a></div></li>
                         <li class="collection-item"><div>Minutos<a href="#" style="color: black;text-decoration: none;" class="secondary-content">{{ atleta.minutos }}</a></div></li>
