--- a/jogo/templates/jogo/estatistica.html
+++ b/jogo/templates/jogo/estatistica.html
@@ -14,6 +14,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Gols</th>
+                                <th>Média</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -21,6 +22,7 @@
                                 <tr>
                                     <td>{{ atleta.nome}}</td>
                                     <td>{{ atleta.gols }}</td>
+                                    <td>{{ atleta.media_gols }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
@@ -45,6 +47,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Assis.</th>
+                                <th>Média</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -55,6 +58,7 @@
                                 <tr>
                                     <td>{{ atleta.nome }}</td>
                                     <td>{{ atleta.assistencia }}</td>
+                                    <td>{{ atleta.media_assistencia }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
@@ -103,6 +107,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Defesas</th>
+                                <th>Média</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -110,6 +115,7 @@
                                 <tr>
                                     <td>{{ atleta.nome }}</td>
                                     <td>{{ atleta.defesa }}</td>
+                                    <td>{{ atleta.media_defesa }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
