--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
         <a style="list-style: none" href="http://facebook.com/realamatismofc/">
             <i class="fab fa-facebook-square fa-2x"></i>
         </a>
-        <a style="list-style: none" href="https://www.instagram.com/realmatismo_fc1/">
+        <a style="list-style: none" href="https://www.instagram.com/realmatismo_f7c/">
             <i class="fab fa-instagram fa-2x"></i>
         </a>
     </div>
@@ -11,6 +11,6 @@
 
 <div class="footer-copyright ">
     <div class="container black-text text-darken-2">
-        © 2018-2019 Todos os direitos reservados para Diego Denzer versao 2.1
+        © 2018-2019 Todos os direitos reservados para Diego Denzer versao 3.0
     </div>
 </div>
