--- a/jogo/templates/jogo/artilharia.html
+++ b/jogo/templates/jogo/artilharia.html
@@ -11,6 +11,7 @@
                             <tr>
                                 <th>Nome</th>
                                 <th>Gols</th>
+                                <th>Média</th>
                             </tr>
                         </thead>
                          <tbody>
@@ -18,6 +19,7 @@
                                 <tr>
                                     <td>{{ atleta.nome}}</td>
                                     <td>{{ atleta.gols }}</td>
+                                    <td>{{ atleta.media_gols }}</td>
                                 </tr>
                             {% endfor %}
                          </tbody>
